<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchoolCraig</string>
    <string name="title_posting_detail">Posting Information</string>
    <string name="title_posting_list">Postings</string>
    <string name="empty">Empty</string>
    <string name="add_posting_string">Add Posting</string>
    <string name="title_activity_add_posting">Add Posting</string>
    <string name="hint_posting_title">Posting Title</string>
    <string name="hint_posting_description">Posting Description</string>
    <string name="hint_posting_price">Posting Price</string>
    <string name="hint_posting_category">Posting Category</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="posted">Posted:</string>
    <string name="price">Price:</string>
    <string name="contact">Contact:</string>
    <string name="error_field_required">This field is required</string>
    <string name="filter_postings">Filter Postings</string>
    <string name="filter_posting_activity_title">Filter Postings</string>
    <string name="done_string">Done</string>
    <string name="update_string">Update</string>
    <string name="logout_string">Logout</string>
    <string name="delete_string">Delete Post</string>
    <string name="dollar_sign">$</string>
    <string name="to_dollar_sign">to $</string>
    <string name="initial_price_range_val">0.00</string>

    <!-- String related to logout -->
    <string name="check_email">Check your email to verify your account.</string>
    <string name="registration_unsuccessful">Registration not successful. Ensure you have not already registered or try again.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="first_name_register">First Name</string>
    <string name="last_name_register">Last Name</string>
    <string name="email_register">Email Address</string>
    <string name="password_register">Password</string>
    <string name="verify_password_register">Verify Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_mismatch_passwords">Passwords do not match</string>
    <string name="error_existing_email">This email is already registered with a user</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_not_vandy_email">This is not a valid Vanderbilt.edu email</string>
    <string name="error_unauthorized">Wrong email or password.</string>

    <string-array name="filter_options">
        <item>Reset Filters</item>
        <item>Category</item>
        <item>Price Range</item>
        <item>By Date</item>
        <item>My Posts</item>
    </string-array>

    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
