<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs278.schoolcraig.AddEventActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <EditText
	        android:id="@+id/add_posting_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_posting_title"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/add_posting_description"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_posting_description"
	        android:ems="10"
	        android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/add_posting_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_posting_price"
            android:ems="10"
            android:inputType="numberDecimal" />
	
	    <Spinner
	        android:id="@+id/add_posting_category"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/hint_posting_category" />
	    
		<Button
	        android:id="@+id/add_posting_done_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:onClick="addNewPostingDoneButtonClick"
	        android:text="@string/add_posting_string" />
        
	</LinearLayout>
        
</ScrollView>

    

