<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs278.schoolcraig.EventDetailActivity" >

	<TableLayout
	    android:id="@+id/posting_detail_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView 
		    android:id="@+id/posting_detail_title"
		    android:textAppearance="@android:style/TextAppearance.Large"
		    android:textStyle="bold"
		    android:gravity="center_horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
	        android:layout_weight="1"
		    android:padding="20dp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/category" />

            <TextView
                android:id="@+id/posting_detail_category"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="italic"
                android:gravity="start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>
	    
		<TextView 
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:gravity="start"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
	        android:text="@string/description" />
		
	    <TextView 
	        android:id="@+id/event_detail_description"
	        android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/secondary_text_light"
	        android:textStyle="italic"
	        android:gravity="start"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
	        android:paddingBottom="20dp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/contact" />

            <TextView
                android:id="@+id/posting_detail_poster"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="italic"
                android:gravity="start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_light"
                android:layout_weight="1" />
        </TableRow>

        <TextView
            android:id="@+id/posting_detail_creation_date"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
	    
	</TableLayout>

</ScrollView>
